--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,8 @@
-*{
-    color: rebeccapurple;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer utilities {
+    .w-main{
+        width: 1182px;
+    }
+  }
